--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,26 @@
   </head>
 </html>
 <body>
+  <header>
+    <div class="header-main">
+      <div class="header-logo"><img src="" alt=""></div>
+      <div class="header-nav">
+        <ul>
+          <li class="active"><a href="#">关于真言</a></li>
+          <li><a href="#">新闻中心</a></li>
+          <li><a href="#">产品中心</a></li>
+          <li><a href="#">解决方案</a></li>
+          <li><a href="#">典型案例</a></li>
+          <li><a href="#">技术服务</a></li>
+          <li><a href="#">招贤纳士</a></li>
+          <li><a href="#">联系我们</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
   <div class="content">content</div>
+  <footer>
+    <p>Copyright &copy; 2020</p>
+    <p>公司地址</p>
+  </footer>
 </body>
