--- a/public/contact.html
+++ b/public/contact.html
@@ -34,29 +34,18 @@
   </div>
   <div class="zp-main">
     <div class="content-title">
-      <h3>新闻中心</h3><span>news cemter </span>
+      <h3>联系我们</h3><span>contact us</span>
     </div>
-    <div class="content-newslist">
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
-      </div>
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
-      </div>
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
+    <div class="zp-contact">
+      <div class="content-component">为了进一步</div>
+      <div class="map"><img src="./static/images/map.png" alt=""></div>
+      <div class="mark-items">
+        <div class="item"><span class="icon icon-address"></span><span>河北真言电子</span></div>
+        <div class="item"><span class="icon icon-phone"></span><span>电话：0111</span></div>
+        <div class="item"><span class="icon icon-fax"></span><span>传真</span></div>
+        <div class="item"><span class="icon icon-postcode"></span><span>050091</span></div>
+        <div class="item"><span class="icon icon-email"></span><span>Email:</span></div>
+        <div class="item"><span class="icon icon-address"></span><span>地址：</span></div>
       </div>
     </div>
   </div>
