--- a/public/example.html
+++ b/public/example.html
@@ -34,28 +34,43 @@
   </div>
   <div class="zp-main">
     <div class="content-title">
-      <h3>新闻中心</h3><span>news cemter </span>
+      <h3>经典案例</h3><span>classic case</span>
     </div>
-    <div class="content-newslist">
+    <div class="content-breadcrumbs">
+      <h4>经典案例</h4>
+      <div class="breadcrumbs">
+        <div class="ad">您当前的位置: </div><span>网站首页</span><span>经典案例</span>
+      </div>
+    </div>
+    <div class="page-block">
+      <div class="content-nav">
+        <ul>
+          <li> <a href="">环境治理<span></span></a></li>
+          <li> <a href="">环境监测<span></span></a></li>
+        </ul>
+      </div>
+      <div class="page-min-banner"><img src="http://placehold.it/500x100" alt=""></div>
+    </div>
+    <div class="content-itemlist">
       <div class="news-item">
         <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
         <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
+          <h4>产品名称</h4>
+          <p>描述描述</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
         </div>
       </div>
       <div class="news-item">
         <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
         <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
+          <h4>产品名称</h4>
+          <p>描述描述</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
         </div>
       </div>
       <div class="news-item">
         <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
         <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
+          <h4>产品名称</h4>
+          <p>描述描述</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
         </div>
       </div>
     </div>
