--- a/public/products.html
+++ b/public/products.html
@@ -4,70 +4,102 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="./static/css/main.css">
+    <link rel="stylesheet" href="./static/css/main.css"><link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">   
   </head>
 </html>
 <body>
   <header>
     <div class="header-main">
-      <div class="header-logo"><img src="" alt=""></div>
+      <div class="header-logo"><img src="./static/images/logo.png" alt=""></div>
       <div class="header-nav">
         <ul>
-          <li class="active"><a href="#">关于真言</a></li>
-          <li><a href="#">新闻中心</a></li>
-          <li><a href="#">产品中心</a></li>
-          <li><a href="#">解决方案</a></li>
-          <li><a href="#">典型案例</a></li>
-          <li><a href="#">技术服务</a></li>
-          <li><a href="#">招贤纳士</a></li>
-          <li><a href="#">联系我们</a></li>
+          <li class="active"><a href="index.html">关于真言</a></li>
+          <li><a href="news.html">新闻中心</a></li>
+          <li><a href="products.html">产品中心</a></li>
+          <li><a href="solutions.html">解决方案</a></li>
+          <li><a href="example.html">典型案例</a></li>
+          <li><a href="server.html">技术服务</a></li>
+          <li><a href="recruitment.html">招贤纳士</a></li>
+          <li><a href="contact.html">联系我们</a></li>
         </ul>
       </div>
     </div>
   </header>
-  <div class="content">content</div>
-  <div class="content-title">
-    <h3>产品中心</h3><span>product cemter </span>
-  </div>
-  <div class="content-breadcrumbs">
-    <h4>产品中心</h4>
-    <div class="breadcrumbs">
-      <div class="ad">您当前的位置: </div><span>网站首页</span><span>产品中心</span>
+  <div class="swiper-container page-banner">
+    <div class="swiper-wrapper">
+      <div class="swiper-slide"><img src="./static/images/banner-1.png" alt=""></div>
+      <div class="swiper-slide"><img src="./static/images/banner-2.png" alt=""></div>
     </div>
+    <div class="swiper-pagination"></div>
   </div>
-  <div class="content-nav">
-    <ul>
-      <li>子产品1</li>
-      <li>子产品2</li>
-      <li>子产品3</li>
-      <li>子产品4</li>
-    </ul>
-  </div>
-  <div class="content-itemlist">
-    <div class="news-item">
-      <div class="item-img"><img src="" alt=""/></div>
-      <div class="item-content">
-        <h4>产品名称</h4>
-        <p>描述描述</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多</a></span>
+  <div class="zp-main">
+    <div class="content-title">
+      <h3>产品中心</h3><span>product cemter </span>
+    </div>
+    <div class="content-breadcrumbs">
+      <h4>产品中心</h4>
+      <div class="breadcrumbs">
+        <div class="ad">您当前的位置: </div><span>网站首页</span><span>产品中心</span>
       </div>
     </div>
-    <div class="news-item">
-      <div class="item-img"><img src="" alt=""/></div>
-      <div class="item-content">
-        <h4>产品名称</h4>
-        <p>描述描述</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多</a></span>
+    <div class="page-block">
+      <div class="content-nav">
+        <ul>
+          <li> <a href="">环境治理<span></span></a></li>
+          <li> <a href="">环境监测<span></span></a></li>
+        </ul>
       </div>
+      <div class="page-min-banner"><img src="http://placehold.it/500x100" alt=""></div>
     </div>
-    <div class="news-item">
-      <div class="item-img"><img src="" alt=""/></div>
-      <div class="item-content">
-        <h4>产品名称</h4>
-        <p>描述描述</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多</a></span>
+    <div class="content-itemlist">
+      <div class="news-item">
+        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
+        <div class="item-content">
+          <h4>蓄热式催化净化装置（RCO）</h4>
+          <p>蓄热式催化焚烧炉，是将低温催化氧化与蓄热技术相结合的一种有机废气处理设备。该设备是在RTO技术基础上发展起来的一种新型挥发性有机物处理设备，它吸取了RTO能够充分蓄热回收热能的优点，在催化氧化过程中，催化剂表面的作用使反应物分子富集于催化剂表面，催化剂降低反应所需活化能，加快了氧化反应的进行，提高了氧化反应的速率。在特定催化剂的作用下，有机物在较低的温度下(250℃～300℃)发生氧化分解，生成CO2和H2O，并放出大量热能</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
+        </div>
+      </div>
+      <div class="news-item">
+        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
+        <div class="item-content">
+          <h4>蓄热式热力焚化炉（RTO）</h4>
+          <p>蓄热式废气焚烧炉(RTO)是本公司在消化、吸收国内外先进技术的基础上开发的一种有机废气治理设备。该装置主要利用高效蓄热材料，通过废气气流的程序切换，将燃烧废气的废热贮存在蓄热材料中，用于下一阶段进入的废气预热，提高废气进气温度，回收废热，与传统的高温焚化以及催化燃烧等工艺相比，具有热效率高(≥95%)、运行可靠、能处理大风量、中高浓度废气等特点。</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
+        </div>
+      </div>
+      <div class="news-item">
+        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
+        <div class="item-content">
+          <h4>活性炭吸附回收装置</h4>
+          <p>活性炭吸附回收装置是利用活性炭对有机溶剂的强吸附性而开发的。它是采用吸附浓缩—脱附再生—溶剂分离回收的工艺流程而设计的，由并联的两个或三个活性炭吸附器和一套脱附回收装置组成。它具有技术成熟，性能稳定，净化效率高，可回收有机物，尾气排放浓度低、安全可靠等优点。</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
+        </div>
+      </div>
+      <div class="news-item">
+        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
+        <div class="item-content">
+          <h4>活性炭纤维吸附回收装置</h4>
+          <p>活性炭纤维吸附回收装置是一种固定循环式吸附床机构，它利用于吸附、蒸汽解析性能优异的活性炭纤维作为吸附剂，可将有机废气中的有机物质吸附，并将有机物回收利用，从而达到节能降耗的目的，净化率可达95%以上，为客户大大减轻了环保压力。吸附床一般不采用不锈钢材质，两箱或多箱吸附、连续操作运行，大大提高产品的回收效率。</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
+        </div>
+      </div>
+      <div class="news-item">
+        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
+        <div class="item-content">
+          <h4>沸石转轮吸附浓缩装置</h4>
+          <p>沸石转轮吸附浓缩装置采用吸附-脱附-浓缩焚化三项连续程序，主要用于有机废气的治理;特别适合于大风量，低浓度场合。该吸附装置以陶瓷纤维为基材，做成蜂窝状的大圆盘轮状系统，轮子表面涂覆疏水性沸石做吸附剂。沸石转轮吸附浓缩装置主要由废气预处理系统、分子筛转轮浓缩吸附系统、脱附系统、冷却干燥系统和自动控制系统等组成。转轮后一般有后处理系统</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
+        </div>
+      </div>
+      <div class="news-item">
+        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
+        <div class="item-content">
+          <h4>生物除臭装置</h4>
+          <p>本公司采用目前世界先进的生物法来治理恶臭污染，其主要原理是将微生物接种于包裹有营养膜的无机滤料表面，微生物以营养膜和恶臭物质为饵料而繁殖，当恶臭分子被吸附在膜和无机滤料上时，微生物就会将这些恶臭物质分解消化，最终生成无污染的无机物质。</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
+        </div>
       </div>
     </div>
   </div>
   <footer>
     <p>Copyright &copy; 2020</p>
     <p>公司地址</p>
-  </footer>
+  </footer><script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"> </script>
+  <script src="./static/js/main.js"></script>
 </body>
