--- a/public/recruitment.html
+++ b/public/recruitment.html
@@ -25,39 +25,10 @@
       </div>
     </div>
   </header>
-  <div class="swiper-container page-banner">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="./static/images/banner-1.png" alt=""></div>
-      <div class="swiper-slide"><img src="./static/images/banner-2.png" alt=""></div>
-    </div>
-    <div class="swiper-pagination"></div>
-  </div>
+  <div class="include">./common/banner.jade</div>
   <div class="zp-main">
     <div class="content-title">
-      <h3>新闻中心</h3><span>news cemter </span>
-    </div>
-    <div class="content-newslist">
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
-      </div>
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
-      </div>
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
-      </div>
+      <h3>人才理念</h3><span>talent concept</span>
     </div>
   </div>
   <footer>
