--- a/public/server.html
+++ b/public/server.html
@@ -34,30 +34,24 @@
   </div>
   <div class="zp-main">
     <div class="content-title">
-      <h3>新闻中心</h3><span>news cemter </span>
+      <h3>技术服务</h3><span>Technical Services</span>
     </div>
-    <div class="content-newslist">
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
+    <div class="content-breadcrumbs">
+      <h4>技术服务</h4>
+      <div class="breadcrumbs">
+        <div class="ad">您当前的位置: </div><span>网站首页</span><span>技术服务</span>
       </div>
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
+    </div>
+    <div class="page-block">
+      <div class="content-nav">
+        <ul>
+          <li> <a href="">售后服务<span></span></a></li>
+          <li> <a href="">客户留言<span></span></a></li>
+          <li> <a href="">资料下载<span></span></a></li>
+          <li> <a href="">投诉建议<span></span></a></li>
+        </ul>
       </div>
-      <div class="news-item">
-        <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
-        <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
-        </div>
-      </div>
+      <div class="page-min-banner"><img src="http://placehold.it/500x100" alt=""></div>
     </div>
   </div>
   <footer>
