--- a/public/solutions.html
+++ b/public/solutions.html
@@ -25,37 +25,48 @@
       </div>
     </div>
   </header>
-  <div class="swiper-container page-banner">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide"><img src="./static/images/banner-1.png" alt=""></div>
-      <div class="swiper-slide"><img src="./static/images/banner-2.png" alt=""></div>
-    </div>
-    <div class="swiper-pagination"></div>
-  </div>
   <div class="zp-main">
     <div class="content-title">
-      <h3>新闻中心</h3><span>news cemter </span>
+      <h3>解决方案</h3><span>solution</span>
     </div>
-    <div class="content-newslist">
+    <div class="content-breadcrumbs">
+      <h4>解决方案</h4>
+      <div class="breadcrumbs">
+        <div class="ad">您当前的位置: </div><span>网站首页</span><span>解决方案</span>
+      </div>
+    </div>
+    <div class="page-block">
+      <div class="content-nav">
+        <ul>
+          <li> <a href="">废气治理<span></span></a></li>
+          <li> <a href="">废水处理<span></span></a></li>
+          <li> <a href="">环境检测<span></span></a></li>
+          <li> <a href="">环境信息化<span></span></a></li>
+          <li> <a href="">基础设施建设<span></span></a></li>
+        </ul>
+      </div>
+      <div class="page-min-banner"><img src="http://placehold.it/500x100" alt=""></div>
+    </div>
+    <div class="content-itemlist">
       <div class="news-item">
         <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
         <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
+          <h4>废气治理解决方案</h4>
+          <p>低温等离子体技术用于废气领域的治理是近十年内才发展起来的一门新兴电子化学技术，它融合高压放电、机械制造、工业化学、消防安全等多个领域的技术于一体，运用全新的理念、新颖的技术、独到的治理方法为环保领域中工业废气的治理开辟了一条新思路</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
         </div>
       </div>
       <div class="news-item">
         <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
         <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
+          <h4>废水治理解决方案</h4>
+          <p>低成本、高能效地使废水达标排放或回用是水处理领域永远追求的目标,而废水中有毒、难降解污染物(如含芳环类化合物、有机聚合物、表面活性剂等)的治理是达标排放或回用中的关键环节。针对这些污染物，</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
         </div>
       </div>
       <div class="news-item">
         <div class="item-img"><img src="./static/images/image-default.png" alt=""/></div>
         <div class="item-content">
-          <h4>新闻标题<span>2020-02-21</span></h4>
-          <p>描述描述</p><span class="learn-more"> <a href="#">查看更多</a></span>
+          <h4>产品名称</h4>
+          <p>描述描述</p><span class="learn-more"> <a href="#" class="btn-primary">查看更多>></a></span>
         </div>
       </div>
     </div>
