update map page

--- a/public/contact.html
+++ b/public/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./static/css/main.css"><link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">   
+    <script type="text/javascript" src="//api.map.baidu.com/getscript?type=webgl&v=1.0&ak=GXdu5k7ByAnymGNbZaEG65WL2DktAWWF"></script>
   </head>
 </html>
 <body>
@@ -38,7 +39,7 @@
     </div>
     <div class="zp-contact">
       <div class="content-component">为了进一步</div>
-      <div class="map"><img src="./static/images/map.png" alt=""></div>
+      <div id="map" class="map"></div>
       <div class="mark-items">
         <div class="item"><span class="icon icon-address"></span><span>河北真言电子</span></div>
         <div class="item"><span class="icon icon-phone"></span><span>电话：0111</span></div>
