--- a/public/products.html
+++ b/public/products.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="./static/css/main.css"><link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">   
+    <script type="text/javascript" src="//api.map.baidu.com/getscript?type=webgl&v=1.0&ak=GXdu5k7ByAnymGNbZaEG65WL2DktAWWF"></script>
   </head>
 </html>
 <body>
